Moved scripts from source to notebooks

--- a/notebooks/nb_93_CollectDataWithMinari.ipynb
+++ b/notebooks/nb_93_CollectDataWithMinari.ipynb
@@ -257,7 +257,7 @@
     "from training_rl.offline_rl.utils import one_hot_to_integer\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.simple_grid import Custom2DGridEnv\n",
     "import numpy as np\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import snapshot_env\n",
+    "from scripts.visualizations.utils import snapshot_env\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
     "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode\n",
@@ -267,7 +267,7 @@
     "from minari import StepDataCallback, DataCollectorV0\n",
     "from training_rl.offline_rl.utils import delete_minari_data_if_exists\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.utils import generate_compatible_minari_dataset_name\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions\n",
+    "from scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions\n",
     "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
     "\n",
     "\n",
