--- a/notebooks/nb_992_Offline_rl_algorithms_II.ipynb
+++ b/notebooks/nb_992_Offline_rl_algorithms_II.ipynb
@@ -253,7 +253,7 @@
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
     "import warnings\n",
     "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import snapshot_env\n",
+    "from scripts.visualizations.utils import snapshot_env\n",
     "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode\n",
