--- a/notebooks/nb_95_imitation_learning-example.ipynb
+++ b/notebooks/nb_95_imitation_learning-example.ipynb
@@ -263,7 +263,7 @@
     "import minari\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    MinariDatasetConfig, create_minari_datasets\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions, \\\n",
+    "from scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions, \\\n",
     "    snapshot_env\n",
     "from training_rl.offline_rl.custom_envs.utils import InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
