--- a/notebooks/nb_98_Offpolicy_distributional_shift_2.ipynb
+++ b/notebooks/nb_98_Offpolicy_distributional_shift_2.ipynb
@@ -256,14 +256,14 @@
     "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import snapshot_env\n",
+    "from scripts.visualizations.utils import snapshot_env\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import RenderMode\n",
     "from training_rl.offline_rl.custom_envs.utils import InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
-    "from training_rl.offline_rl.scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions\n",
+    "from scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions\n",
     "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import TrainedPolicyConfig\n",
     "from training_rl.offline_rl.offline_policies.policy_registry import PolicyName\n",
